--- a/weblate/locale/ko/LC_MESSAGES/djangojs.po
+++ b/weblate/locale/ko/LC_MESSAGES/djangojs.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #: weblate/static/loader-bootstrap.js:180
 msgid "Add to screenshot"
-msgstr "갈무리 추가"
+msgstr "스크린샷 추가"
 
 #: weblate/static/loader-bootstrap.js:195
 msgid "Error loading search results!"
